fix some js bug

--- a/src/main/resources/static/yueting/css/small.css
+++ b/src/main/resources/static/yueting/css/small.css
@@ -1,10 +1,6 @@
 @charset "utf-8";
-/**************************************************
- * MKOnlinePlayer v2.31
- * 小屏幕样式修复
- * 编写：mengkun(http://mkblog.cn)
- * 时间：2017-9-13
- *************************************************/
+
+/* 小屏幕修复 */
 
 /* 小于 900px 采用这个样式 */
 @media screen and (max-width: 900px) {
