--- a/src/main/resources/templates/yueting/index.html
+++ b/src/main/resources/templates/yueting/index.html
@@ -8,8 +8,8 @@
     <meta name="author" content="mengkun">
     <meta name="generator" content="KodCloud">
     <meta http-equiv="Cache-Control" content="no-siteapp">
-    
-    <!-- 强制移动设备以app模式打开页面(即在移动设备下全屏，仅支持部分浏览器) -->
+
+    <!-- 移动端支持 -->
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-touch-fullscreen" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
@@ -18,9 +18,9 @@
     <meta name="x5-fullscreen" content="true"><!--QQ强制全屏-->
     <meta name="x5-page-mode" content="app"><!--QQ应用模式-->
     
-    <title>MKOnlinePlayer v2.0</title>
-    <meta name="description" content="一款开源的基于网易云音乐api的在线音乐播放器。具有音乐搜索、播放、下载、歌词同步显示、个人音乐播放列表同步等功能。"/>
-    <meta name="keywords" content="孟坤播放器,在线音乐播放器,MKOnlinePlayer,网易云音乐,音乐api,音乐播放器源代码"/>
+    <title>越听 </title>
+    <meta name="description" content="一款基于区块链的分享你喜欢音乐的 DApp"/>
+    <meta name="keywords" content="音乐，分享，DApp，区块链"/>
     
     <!-- 不支持IE8及以下版本浏览器 -->
     <!--[if lte IE 8]>
@@ -51,7 +51,7 @@
 
 <!-- 头部logo -->
 <div class="header">
-    <div class="logo" title="Version 0.01; Powered by Wenxueliu">
+    <div class="logo" title="Powered by Wenxueliu">
         ♫ 越听
     </div>
 </div>  <!--class="header"-->
@@ -67,7 +67,7 @@
                 -->
                 <span class="btn" data-action="playing" title="我的播放列表">我的</span>
                 <span class="btn" data-action="sheet" title="音乐广场">音乐广场</span>
-                <input class="btn" type="text" id="search_value" placeholder="请输入想要听的歌曲名，歌手等"/>
+                <input class="btn" type="text" id="search_value" placeholder="试一试手气"/>
                 <span class="btn" data-action="search" title="点击搜索音乐">搜索</span>
             </div>
         </div>  <!--class="btn-bar"-->
@@ -151,8 +151,7 @@
 
 <!-- 站长统计代码 -->
 <span style="display: none">
-    <!-- 各类统计代码都放在这里…… -->
-    <script src="https://s95.cnzz.com/z_stat.php?id=1261525999&web_id=1261525999" language="JavaScript"></script>
+    <!-- TODO 统计代码都放在这里…… -->
 </span>
 
 </body>
