--- a/src/main/resources/templates/yueting/sign_up.html
+++ b/src/main/resources/templates/yueting/sign_up.html
@@ -72,6 +72,28 @@
             window.location.href="/sign_in";
         })
     </script>
+    <script>
+        var isMobile = {
+            Android: function() {
+                return navigator.userAgent.match(/Android/i) ? true : false;
+            },
+            BlackBerry: function() {
+                return navigator.userAgent.match(/BlackBerry/i) ? true : false;
+            },
+            iOS: function() {
+                return navigator.userAgent.match(/iPhone|iPad|iPod/i) ? true : false;
+            },
+            Windows: function() {
+                return navigator.userAgent.match(/IEMobile/i) ? true : false;
+            },
+            any: function() {
+                return (isMobile.Android() || isMobile.BlackBerry() || isMobile.iOS() || isMobile.Windows());
+            }
+        };
+        if (isMobile.Android() || isMobile.iOS()) {
+            $(".login_root").css("width", "83%");
+        }
+    </script>
 
 </body>
 </html>
